[package]
name = "pencil"
version = "0.3.0"
authors = ["Shipeng Feng <fsp261@gmail.com>"]
keywords = ["web", "framework"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/fengsp/pencil"
homepage = "https://github.com/fengsp/pencil"
documentation = "http://fengsp.github.io/pencil/"
description = "A micro web framework for Rust."

[dependencies]
regex = "0.2"
rustc-serialize = "0.3.19"
url = "1.2.0"
log = "0.3.6"
handlebars = { version = "0.25", features = ["partial_legacy"] }
typemap = "0.3.3"
mime = "0.2.2"
mime_guess = "1.8.0"
hyper = "0.10"
formdata = "0.12"
