[package]
name = "pencil"
version = "0.3.0"
authors = ["Shipeng Feng <fsp261@gmail.com>"]
keywords = ["web", "framework"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/fengsp/pencil"
homepage = "https://github.com/fengsp/pencil"
documentation = "http://fengsp.github.io/pencil/"
description = "A micro web framework for Rust."

[dependencies]
regex = "0.2"
serde = "0.9"
serde_json = "0.9"
url = "1.2"
log = "0.3"
handlebars = { version = "0.25", features = ["partial_legacy", "serde_type"] }
typemap = "0.3"
mime = "0.2"
mime_guess = "1.8"
hyper = "0.10"
formdata = "0.12"
lazy_static = "0.2"
time = "0.1"
